@@ -1,1 +1,2 @@
-require("prototypes.technology.belts")
+require("prototypes.technology.belts")    -- belt research for all mods
+require("prototypes.entities.fastloader") -- fastest loader for all mods
